--- a/index.html
+++ b/index.html
@@ -2,16 +2,24 @@
   <div>
     <h4>Book a call</h4>
     <div>
+      <label>First Name</label>
+      <input name="FirstName" type="text" placeholder="enter first name here" />
+    </div>
+     <div>
+      <label>Last Name</label>
+      <input name="LastName" type="text" placeholder="enter last name here" />
+    </div>
+     <div>
       <label>Name</label>
-      <input name="LastName" type="text" placeholder="enter name here" />
+      <input name="Email" type="text" placeholder="enter email here" />
     </div>
     <div>
       <label>Company</label>
-      <input name="company" type="text" placeholder="enter company here" />
+      <input name="Company" type="text" placeholder="enter company here" />
     </div>
     <div>
       <label>Country</label>
-      <input name="name" type="text" placeholder="enter  here" />
+      <input name="Country" type="text" placeholder="enter country here" />
     </div>
     <div>
     <button type="submit">Save</button>
