--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
       <input name="Company" type="text" placeholder="enter company here" />
     </div>
     <div>
-      <label>Country</label>
-      <input name="Country" type="text" placeholder="enter country here" />
+      <label for="country">Country</label>
+        <select id="country" name="country">
+        <option value="Canada">Canada</option>
+        <option value="United States">United States</option>
+        <option value="France">France</option>
+        <option value="United Kingdom">United Kingdom</option>
+      </select>
     </div>
     <div>
     <button type="submit">Save</button>
