--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ function closeForm() {
       </select>
     </div>
     <div>
-    <button class="btn" type="submit">Save</button>
+    <button class="btn" type="submit">Submit</button>
     <button class="btn cancel" onclick="closeForm()" type="button">Cancel</button>
     </div>
   </div>
