--- a/index.html
+++ b/index.html
@@ -264,6 +264,20 @@
 <option value="Zimbabwe">Zimbabwe</option>
       </select>
     </div>
+     <div>
+      <label for="Product">Which product are you interested in?</label>
+       <select id="Product" name="Product">
+       <option value="Invoices / Receipts">Invoices / Receipts</option>
+         <option value="ID Documents (Passports, Driver Licenses, etc.)">ID Documents (Passports, Driver Licenses, etc.)</option>
+         <option value="The API Builder: Custom Documents">The API Builder: Custom Documents</option>
+         <option value="Our Open-source library: docTR">Our Open-source library: docTR</option>
+         <option value="Unsure">Unsure</option>
+           </select>
+    </div>
+    <div>
+      <label>Comments</label>
+      <textarea name="Comments" cols="40" rows="3"></textarea>
+    </div>
     <div>
     <button class="btn" type="submit">Submit</button>
     <button class="btn cancel" onclick="closeForm()" type="button">Cancel</button>
