--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <input name="Company" type="text" placeholder="enter company here" />
     </div>
     <div>
-      <label for="country">Country</label>
-        <select id="country" name="country">
+      <label for="Country">Country</label>
+        <select id="Country" name="Country">
 <option value="United States">United States</option>
 <option value="France">France</option>
 <option value="United Kingdom">United Kingdom</option>
