--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <button class="open-button" onclick="openForm()">Talk to an expert</button>
 
-<div class="form-popup" id="myForm">
+<div class="form-popup" id="demoForm">
 <form class="form-container">
   <div>
     <h4>Book a call</h4>
@@ -366,10 +366,10 @@ ChiliPiper.scheduling("mindee", "inbound-router", {title: "Thanks! What time wor
 
 <script>
   function openForm() {
-  document.getElementById("myForm").style.display = "block";
+  document.getElementById("demoForm").style.display = "block";
 }
 
 function closeForm() {
-  document.getElementById("myForm").style.display = "none";
+  document.getElementById("demoForm").style.display = "none";
 }
 </script>
