--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <h4>Book a call</h4>
     <div>
       <label>First Name</label>
-      <input name="FirstName" type="text" placeholder="enter first name here" />
+      <input name="FirstName" type="text" placeholder="First name" />
     </div>
      <div>
       <label>Last Name</label>
-      <input name="LastName" type="text" placeholder="enter last name here" />
+      <input name="LastName" type="text" placeholder="Last name" />
     </div>
      <div>
       <label>Email</label>
-      <input name="Email" type="email" placeholder="enter email here" />
+      <input name="Email" type="email" placeholder="Work email" />
     </div>
     <div>
       <label>Company</label>
-      <input name="Company" type="text" placeholder="enter company here" />
+      <input name="Company" type="text" placeholder="Company" />
     </div>
     <div>
       <label for="Country">Country</label>
@@ -275,7 +275,8 @@
            </select>
     </div>
     <div>
-      <label>Comments</label>
+      <label>Please share anything that will help prepare for our meeting.
+</label>
       <textarea name="Comments" cols="20" rows="3"></textarea>
     </div>
     <div>
