--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <h4>Book a call</h4>
     <div>
       <label>First Name</label>
-      <input name="FirstName" type="text" placeholder="First name" />
+      <input name="FirstName" type="text" placeholder="First name" required />
     </div>
      <div>
       <label>Last Name</label>
