--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     </div>
      <div>
       <label>Last Name</label>
-      <input name="LastName" type="text" placeholder="Last name" />
+      <input name="LastName" type="text" placeholder="Last name" required />
     </div>
      <div>
       <label>Email</label>
-      <input name="Email" type="email" placeholder="Work email" />
+      <input name="Email" type="email" placeholder="Work email" required />
     </div>
     <div>
       <label>Company</label>
-      <input name="Company" type="text" placeholder="Company" />
+      <input name="Company" type="text" placeholder="Company" required />
     </div>
     <div>
       <label for="Country">Country</label>
-        <select id="Country" name="Country">
+        <select id="Country" name="Country" required >
 <option value="United States">United States</option>
 <option value="France">France</option>
 <option value="United Kingdom">United Kingdom</option>
@@ -266,7 +266,7 @@
     </div>
      <div>
       <label for="Product">Which product are you interested in?</label>
-       <select id="Product" name="Product">
+       <select id="Product" name="Product" required >
        <option value="Invoices / Receipts">Invoices / Receipts</option>
          <option value="ID Documents (Passports, Driver Licenses, etc.)">ID Documents (Passports, Driver Licenses, etc.)</option>
          <option value="The API Builder: Custom Documents">The API Builder: Custom Documents</option>
