--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div>
       <label for="Country">Country</label>
         <select id="Country" name="Country" required >
+<option value="">Please select</option>
 <option value="United States">United States</option>
 <option value="France">France</option>
 <option value="United Kingdom">United Kingdom</option>
@@ -267,7 +268,8 @@
      <div>
       <label for="Product">Which product are you interested in?</label>
        <select id="Product" name="Product" required >
-       <option value="Invoices / Receipts">Invoices / Receipts</option>
+         <option value="">Please select</option>
+         <option value="Invoices / Receipts">Invoices / Receipts</option>
          <option value="ID Documents (Passports, Driver Licenses, etc.)">ID Documents (Passports, Driver Licenses, etc.)</option>
          <option value="The API Builder: Custom Documents">The API Builder: Custom Documents</option>
          <option value="Our Open-source library: docTR">Our Open-source library: docTR</option>
